--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,27 @@ a{
 h1{
   color: red;
 }
+body{
+  margin: 0;
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+}
+.wrapper{
+  margin: auto;
+  width: 80%;
+}
+.logo{
+  padding: 40px 0;
+}
+.menu{
+  display: flex;
+  align-items: center;
+}
+.menu__item{
+  padding: 0 13px;
+}
+.menu__item:last-child{
+  padding-right: 0;
+}
