--- a/styles.css
+++ b/styles.css
@@ -11,15 +11,13 @@ body{
   margin: 0;
 }
 .header{
+  padding: 40px 0;
   display: flex;
   justify-content: space-between;
 }
 .wrapper{
   margin: auto;
   width: 80%;
-}
-.logo{
-  padding: 40px 0;
 }
 .menu{
   display: flex;
@@ -30,4 +28,11 @@ body{
 }
 .menu__item:last-child{
   padding-right: 0;
+}
+.logo{
+  // padding: 40px 0;
+// font:bold 24px/31px pt_serifregular,arial,helvetica,sans-serif;
+width: 190px;
+height: 35px;
+background:url('img/logo.svg') ;
 }
