--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,6 @@ div{
 a{
   font-family: 'Roboto', sans-serif;
 }
-h1{
-  color: red;
-}
 body{
   margin: 0;
 }
@@ -14,6 +11,7 @@ body{
   padding: 40px 0;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 100px;
 }
 .wrapper{
   margin: auto;
@@ -76,4 +74,32 @@ body{
 width: 190px;
 height: 35px;
 background:url('img/logo.svg') ;
+}
+.main{
+  padding: 0 63% 100px 0;
+  background: top right  no-repeat url(img/mainimg.svg);
+}
+.main__title{
+  margin: 0 0 40px 0;
+  font:bold 50px/66px pt_serifregular,arial,helvetica,sans-serif;
+}
+.main__title-text_highlight{
+  background:#ECF3FF;
+}
+.main__subtitle{
+  margin: 0 0 41px 0;
+  font: 18px/21px robotoregular ,arial,helvetica,sans-serif;
+}
+.main__button{
+  display: inline-block;
+  font: 14px/16px robotoregular ,arial,helvetica,sans-serif;
+  color: #fff;
+  background:#0056EC;
+  padding: 14px 16px;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: opacity .5s;
+}
+.main__button:hover{
+  opacity:.5;
 }
