--- a/styles.css
+++ b/styles.css
@@ -6,16 +6,24 @@ a{
 }
 body{
   margin: 0;
+  padding: 0;
 }
 .header{
-  padding: 40px 0;
+  padding: 40px 11px 0 5px;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 100px;
+  margin-bottom: 150px;
 }
 .wrapper{
   margin: auto;
   width: 80%;
+}
+.logo{
+  // padding: 40px 0;
+// font:bold 24px/31px pt_serifregular,arial,helvetica,sans-serif;
+width: 190px;
+height: 35px;
+background:url('img/logo.svg') ;
 }
 .menu{
   display: flex;
@@ -68,35 +76,47 @@ body{
 .menu__item:last-child{
   margin-right:0;
 }
-.logo{
-  // padding: 40px 0;
-// font:bold 24px/31px pt_serifregular,arial,helvetica,sans-serif;
-width: 190px;
-height: 35px;
-background:url('img/logo.svg') ;
-}
 .main{
-  padding: 0 63% 100px 0;
-  background: top right  no-repeat url(img/mainimg.svg);
+  margin: 0 5px 0 0;
+  padding: 200px 63% 150px 3px;
+  background: url(img/mainimg.svg);
+  background-repeat: no-repeat;
+  background-position: right ;
 }
+
 .main__title{
-  margin: 0 0 40px 0;
-  font:bold 50px/66px pt_serifregular,arial,helvetica,sans-serif;
+  width: 567px;
+  height: 255px;
+  margin: -108px 0 40px 0;
+  font: 700 66px/87px pt_serifbold,arial,helvetica,sans-serif;
 }
 .main__title-text_highlight{
   background:#ECF3FF;
 }
 .main__subtitle{
   margin: 0 0 41px 0;
-  font: 18px/21px robotoregular ,arial,helvetica,sans-serif;
+  height: 52px;
+  width: 455px;
+  left: 195px;
+  top: 613px;
+  border-radius: nullpx;
+  font: 400 22px/25px robotoregular ,arial,helvetica,sans-serif;
 }
 .main__button{
   display: inline-block;
-  font: 14px/16px robotoregular ,arial,helvetica,sans-serif;
+  height: 22px;
+  width: 227px;
+  margin: 0 5px 0 0;
+  padding: 18px 18px 18px 25px;
+  font-family: robotoregular ,arial,helvetica,sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 25px;
   color: #fff;
   background:#0056EC;
-  padding: 14px 16px;
   text-decoration: none;
+  border-radius: nullpx;
   border-radius: 4px;
   transition: opacity .5s;
 }
