--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-div{
-  font-family: 'Oswald', sans-serif;
-}
-a{
-  font-family: 'Roboto', sans-serif;
-}
 body{
   margin: 0;
   padding: 0;
@@ -19,11 +13,9 @@ body{
   width: 80%;
 }
 .logo{
-  // padding: 40px 0;
-// font:bold 24px/31px pt_serifregular,arial,helvetica,sans-serif;
-width: 190px;
-height: 35px;
-background:url('img/logo.svg') ;
+  width: 190px;
+  height: 35px;
+  background:url('img/logo.svg') ;
 }
 .menu{
   display: flex;
@@ -79,11 +71,8 @@ background:url('img/logo.svg') ;
 .main{
   margin: 0 5px 0 0;
   padding: 200px 63% 150px 3px;
-  background: url(img/mainimg.svg);
-  background-repeat: no-repeat;
-  background-position: right ;
+  background:no-repeat right url(img/mainimg.svg);
 }
-
 .main__title{
   width: 567px;
   height: 255px;
@@ -123,7 +112,6 @@ background:url('img/logo.svg') ;
 .main__button:hover{
   opacity:.5;
 }
-
 @keyframes flash {
   to{
     color: #3CFFF2
@@ -132,8 +120,7 @@ background:url('img/logo.svg') ;
 .main__button{
   animation: flash .5s infinite ease-in-out;
 }
-
- @media (max-width: 1367px){
+@media (max-width: 1367px){
    .wrapper {
        width: 68.6%;
    }
@@ -147,9 +134,7 @@ background:url('img/logo.svg') ;
    }
    .main{
      padding: 100px 63% 65px 3px;
-     background: url(img/mainimg1366.svg);
-     background-repeat: no-repeat;
-     background-position: right ;
+     background:no-repeat right url(img/mainimg1366.svg);
      }
     .main__title {
       width: 434px;
@@ -169,15 +154,12 @@ background:url('img/logo.svg') ;
     padding: 15px 25px 19px 18px;
     font-size: 14px;
     line-height: 16px;
-
 }
  }
   @media (max-width: 1024px){
-
-    .wrapper {
+   .wrapper {
     width: 92%;
 }
-
 .main {
     margin: 0 5px 0 3px;
   }
@@ -188,8 +170,7 @@ background:url('img/logo.svg') ;
    }
  }
   @media (max-width: 667px){
-
-    .menu {
+     .menu {
       display: none;
     }
     .logo{
@@ -208,19 +189,19 @@ background:url('img/logo.svg') ;
       background-size: 84.3%;
       background-position: top center;
     }
-    .main__title{
+.main__title{
       width: 334px;
       height: 95px;
       margin: 6px 0 44px 0;
       font: bold 30px/39px pt_serifbold ,arial,helvetica,sans-serif;
           }
-    .main__subtitle{
+.main__subtitle{
       margin: 55px 0 24.5px 29px;
       height: 57px;
       width: 275px;
       font: 500 16px/18.75px robotoregular ,arial,helvetica,sans-serif;
           }
-    .main__button{
+.main__button{
       margin: 0 1px 0 0;
       height: 10px;
       width: 167px;
@@ -263,20 +244,19 @@ li {
   height: 3.3px;
 }
 .menu__box {
-  display: block;
-  position: fixed;
-  visibility: hidden;
-  top: 0;
- left: -100%;
- width: 375px;
- height: 100%;
- margin: 0;
- padding: 170px 0 0 0;
- list-style: none;
- text-align: center;
- background-color:#ffffff;
+   display: block;
+   position: fixed;
+   visibility: hidden;
+   top: 0;
+   left: -100%;
+   width: 375px;
+   height: 100%;
+   margin: 0;
+   padding: 170px 0 0 0;
+   list-style: none;
+   text-align: center;
+   background-color:#ffffff;
 }
-/* элементы меню */
 .menu__item {
     display: block;
     padding: 12px 27px 11px 24px;
@@ -287,7 +267,6 @@ li {
     font-weight: 500;
     text-decoration: none;
 }
-
 .menu__item:hover {
   background-color: #CFD8DC;
 }
@@ -306,5 +285,4 @@ li {
   visibility: visible;
   left: 0;
 }
-
- }
+}
